--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["jobbyApp/src/App.js"],"fileToBeOpened":"jobbyApp/src/components/Header/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":""}
